--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -2,5 +2,11 @@
   "lang": "ar",
   "english": "English",
   "arabic": "Arabic",
-  "notFound": "الصفحة غير موجودة"
+  "notFound": "الصفحة غير موجودة",
+  "home": "الرئيسيه",
+  "aboutUs": "من نحن",
+  "news": "اخبار",
+  "contactUs": "تواصل معنا",
+  "media":"اخبار",
+  "topNews":"اهم الاخبار"
 }
