--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -16,6 +16,22 @@
   "Economics": "اقتصاد",
   "Art": "فن",
   "viewAllNews": "عرض جميع الاخبار",
-  "signIn":"تسجيل الدخول",
-  "signUp":"انشاء حساب"
+  "signIn": "تسجيل الدخول",
+  "signUp": "انشاء حساب",
+  "Company": "الشركة",
+  "About": "عنا",
+  "Careers": "وظائف",
+  "Mobile": "الهاتف",
+  "Contact": "تواصل",
+  "Help": "مساعدة",
+  "Affilates": "الشركات التابعة",
+  "Media": "صحافة",
+  "News": "اخبار",
+  "Photo": "صور",
+  "Video": "فيديو",
+  "DiscoverApps": "اكتشف تطبيقاتنا",
+  "getIt":"احصل عليه من",
+  "googlePlay":"متجر جوجل",
+  "avaliableOn":"متاح في",
+  "apple":"متجر ابل"
 }
