finish Latestnews page

--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -30,8 +30,9 @@
   "Photo": "صور",
   "Video": "فيديو",
   "DiscoverApps": "اكتشف تطبيقاتنا",
-  "getIt":"احصل عليه من",
-  "googlePlay":"متجر جوجل",
-  "avaliableOn":"متاح في",
-  "apple":"متجر ابل"
+  "getIt": "احصل عليه من",
+  "googlePlay": "متجر جوجل",
+  "avaliableOn": "متاح في",
+  "apple": "متجر ابل",
+  "rights": "كل الحقوق محفوظة لدي reserved@Linkdevelopment.com"
 }
