--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -33,5 +33,6 @@
   "getIt":"Get It",
   "googlePlay":"Google Play",
   "avaliableOn":"Avaliable On",
-  "apple":"Apple"
+  "apple":"Apple",
+  "rights":"All rights reserved@Linkdevelopment.com"
 }
