--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -34,5 +34,7 @@
   "googlePlay": "متجر جوجل",
   "avaliableOn": "متاح في",
   "apple": "متجر ابل",
-  "rights": "كل الحقوق محفوظة لدي reserved@Linkdevelopment.com"
+  "rights": "كل الحقوق محفوظة لدي reserved@Linkdevelopment.com",
+  "findOut":"اكتشف المزيد",
+  "playDemo":"فديو تجريبي"
 }
