--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -34,5 +34,7 @@
   "googlePlay":"Google Play",
   "avaliableOn":"Avaliable On",
   "apple":"Apple",
-  "rights":"All rights reserved@Linkdevelopment.com"
+  "rights":"All rights reserved@Linkdevelopment.com",
+  "findOut":"Find out more",
+  "playDemo":"Play Demo"
 }
