fix issue in footers and news sections

--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -7,7 +7,7 @@
   "aboutUs": "من نحن",
   "news": "اخبار",
   "contactUs": "تواصل معنا",
-  "media": "اخبار",
+  "media": "صحافة",
   "topNews": "اهم الاخبار",
   "allNews": "جميع الاخبار",
   "Technology": "تكنولوجيا",
